--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -491,7 +491,7 @@ To encourage reliable signal availability, 5G Hotspots and connected CBRS Small 
 
 - Be properly installed.
   - Be registered with the SAS (Outdoor Radios Only).
-- **Gnerate at least 1 "heartbeat" per 1 hour for any 12 hours in the 24-hour Reward Period.**
+- **Generate at least 1 "heartbeat" per 1 hour for any 12 hours in the 24-hour Reward Period.**
 - Meet minimum backhaul Speed Test requirements.
 
 ### MOBILE Mappers
