--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -27,9 +27,116 @@ and thus can not "hear" one another directly.
 
 :::
 
-MOBILE Rewards are earned as one "lump sum" by a Wallet with a 5G Hotspot with at least one
-connected, SAS registered, CBRS Small Cell Radio every roughly 24-hour interval. This allows a high
-tolerance for downtime in infrastructure that is beyond the 5G Hotspot Owner's control.
+---
+
+## How To Mine MOBILE
+
+Several factors contribute to the amount of MOBILE a 5G Hotspot will earn over a given period. This
+page covers some higher-level concepts, design elements, and rules to keep in mind that will help
+better explain what you might earn and why. This section covers these and some mining and token
+reward basics.
+
+The Helium Blockchain rewards 5G Hotspots for providing 5G wireless coverage and verifying the
+Helium Network with the Helium MOBILE Token.
+
+Mining MOBILE and providing 5G coverage requires a 5G Hotspot and one or more compatible CBRS Small
+Cell Radios. These components can be purchased as a bundle or separately. All 5G Hotspots must be
+online and registered in the SAS (Spectrum Access System) maintained by the FCC to earn MOBILE
+rewards. Once properly deployed, you, as the owner, are not required to do anything else with your
+5G Hotspot to earn MOBILE.
+
+More than one Small Cell Radio can be connected to a single 5G Hotspot to create a larger 5G
+coverage area. 5G Hotspots can support as many Small Cell Radios as would saturate their bandwidth.
+
+Connecting more than one Small Cell Radio will require an additional networking switch. Refer to the
+5G Hotspot Maker installation guides for specific instructions.
+
+:::info
+
+During [Genesis](./mobile-poc#mobile-genesis), 5G Hotspots will begin to earn MOBILE by reporting
+their status via a “heartbeat,” an automatic reporting process to the Helium Blockchain that the
+Small Cell Radio is online and registered with the SAS.
+
+Genesis is the period during which Hotspot owners will be rewarded for providing 5G coverage with
+pre-mined MOBILE tokens. MOBILE tokens will be redeemable for HNT after the Genesis period ends.
+
+:::
+
+### Small Cell Radio Reward Scaling
+
+All properly installed and registered 5G Hotspots will earn rewards for participating on the
+Network. A rewards unit multiple is applied to the various Small Cell Radio models based on whether
+they are indoor or outdoor, as well as their power output, as follows:
+
+:::note
+
+Soon 5G Hotspots will perform Speed Tests that impact
+[Rewards Scaling Multipliers](./mobile-poc#speed-test-tier-reward-scaling) in addition to Small Cell
+Type.
+
+When Speed Tests are included in Rewards calculations, the Reward weights will be as follows:
+
+| Speed Test           | Acceptable Performance | Degraded Performance | Poor Performance |  Fail   |
+| -------------------- | :--------------------: | :------------------: | :--------------: | :-----: |
+| High Power Outdoor\* |        `4.000`         |       `2.000`        |     `1.000`      | `0.000` |
+| Outdoor              |        `2.500`         |       `1.250`        |     `0.625`      | `0.000` |
+| Indoor               |        `1.000`         |       `0.500`        |     `0.250`      | `0.000` |
+
+:::
+
+> \*Currently, the only High-Power Outdoor Radio is the `Baicells Nova436H`
+
+Individual rewards per period are calculated as a proportion of the total weighted reward units.
+
+## Earnings Example
+
+Earnings are calculated in 3 steps
+
+1. Calculate the Total Emissions Weight and Emissions Weight Ratio for each Small Cell Radio Type
+2. Each Small Cell Radio Type is allocated its ratio of the total rewards in the given epoch
+3. Each 5G Hotspot is proportionally rewarded from its respective rewards pool by Small Cell Radio
+   Type
+
+:::caution
+
+As an example, we can calculate the rewards for a 5G Hotspot in a single epoch assuming the
+following (the below numbers are examples and may not reflect actual deployed 5G Hotspots today):
+
+- 100,000,000 MOBILE Rewarded per day
+- 150 High-Power Outdoor 5G Hotspots earn rewards
+- 800 Outdoor 5G Hotspots earn rewards
+- 1,400 Indoor 5G Hotspots earn rewards
+- 1 Small Cell Radio per 5G Hotspot (in real-world usage, multiple Small Cell Radios can be
+  connected to a 5G Hotspot)
+
+:::
+
+### Total Rewards Units for Epoch
+
+Calculate the Total Reward Points for a given epoch, by using the Reward Weight for each Small Cell
+Radio type.
+
+In this example, the total rewards Points per epoch is 4,000 and the ratios are as follows:
+
+```bash
+  High-Power Outdoor Count (  150) * 4.0    =>      600   =>  0.15
++            Outdoor Count (  800) * 2.5    =>  + 2,000   =>  0.50
++             Indoor Count (1,400) * 1.0    =>  + 1,400   =>  0.35
+-----------------------------------------       --------
+                                                  4,000
+```
+
+### Earnings per Small Cell Radio
+
+Each Small Cell Radio is allocated its rewards based on the reward weight of the model.
+
+> Small Cell Reward = Daily Rewards \* Reward Weight / Count of Small Cell Type
+
+```bash
+High-Power Outdoor  => 100,000,000 * 0.15 /   150 = 100,000 MOBILE per day
+           Outdoor  => 100,000,000 * 0.50 /   800 =  62,500 MOBILE per day
+            Indoor  => 100,000,000 * 0.35 / 1,400 =  25,000 MOBILE per day
+```
 
 ---
 
@@ -127,8 +234,8 @@ Tiered Speed Test values introduce a new multiplier to the Rewards calculations.
   improved (logical `OR`).
 
 When combined with existing
-[Small Cell Type Reward Scale Mulitpliers](./mining-mobile#small-cell-radio-reward-scaling) the
-Rewards Scaling Table is as follows:
+[Small Cell Type Reward Scale Mulitpliers](/5g-on-helium/mobile-poc#small-cell-radio-reward-scaling)
+the Rewards Scaling Table is as follows:
 
 | Speed Test         | Acceptable | Degraded |  Poor   |  Fail   |
 | ------------------ | :--------: | :------: | :-----: | :-----: |
