--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -8,22 +8,22 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # MOBILE Proof of Coverage
 
-The Helium blockchain uses a novel work algorithm called “Proof of Coverage” (PoC) to verify that
+The Helium blockchain uses a novel work algorithm called "Proof of Coverage" (PoC) to verify that
 Hotspots are located where they claim. Put another way, PoC tries to verify, on an ongoing basis,
 that Hotspots are honestly representing their location and the wireless network coverage they are
 creating from that location.
 
 LoRaWAN Hotspots utilize a PoC method that benefits from Hotspots being used as senders ("Beacon")
-and receivers ("Witness") of PoC activity, read more here:
+and receivers ("Witness") of PoC activity; read more here:
 [Proof of Coverage](/blockchain/proof-of-coverage)
 
-While all current 5G Hotspot models _also_ participate in the LoRaWAN network and PoC, the CBRS
+While all current 5G Hotspot models _also_ participate in the LoRaWAN Network and PoC, the CBRS
 Small Cell and 5G aspects of a 5G Hotspot require a new approach to validating PoC.
 
 :::info **One Way Traffic**
 
-CBRS Small Cell Radios can only operate as transmitters, they are not able to receive incoming data
-and thus can not "hear" one another directly.
+CBRS Small Cell Radios can only operate as transmitters; they cannot receive incoming data and thus
+can not "hear" one another directly.
 
 :::
 
@@ -36,8 +36,8 @@ page covers some higher-level concepts, design elements, and rules to keep in mi
 better explain what you might earn and why. This section covers these and some mining and token
 reward basics.
 
-The Helium Blockchain rewards 5G Hotspots for providing 5G wireless coverage and verifying the
-Helium Network with the Helium MOBILE Token.
+The Helium Blockchain rewards 5G Hotspots with CBRS Radios for providing 5G wireless coverage and
+verifying the Helium Network with the Helium MOBILE Token.
 
 Mining MOBILE and providing 5G coverage requires a 5G Hotspot and one or more compatible CBRS Small
 Cell Radios. These components can be purchased as a bundle or separately. All 5G Hotspots must be
@@ -53,11 +53,11 @@ Connecting more than one Small Cell Radio will require an additional networking 
 
 :::info
 
-During [Genesis](./mobile-poc#mobile-genesis), 5G Hotspots will begin to earn MOBILE by reporting
-their status via a “heartbeat,” an automatic reporting process to the Helium Blockchain that the
-Small Cell Radio is online and registered with the SAS.
+During [Genesis](./mobile-poc#mobile-genesis), 5G Hotspots earn MOBILE by reporting their status via
+a "heartbeat," an automatic reporting process to the Helium Blockchain that the Small Cell Radio is
+online and registered with the SAS.
 
-Genesis is the period during which Hotspot owners will be rewarded for providing 5G coverage with
+Genesis is the period during which Hotspot owners are rewarded for providing 5G coverage with
 pre-mined MOBILE tokens. MOBILE tokens will be redeemable for HNT after the Genesis period ends.
 
 :::
@@ -90,7 +90,7 @@ Individual rewards per period are calculated as a proportion of the total weight
 
 ## Earnings Example
 
-Earnings are calculated in 3 steps
+Earnings are calculated in 3 steps.
 
 1. Calculate the Total Emissions Weight and Emissions Weight Ratio for each Small Cell Radio Type
 2. Each Small Cell Radio Type is allocated its ratio of the total rewards in the given epoch
@@ -113,10 +113,10 @@ following (the below numbers are examples and may not reflect actual deployed 5G
 
 ### Total Rewards Units for Epoch
 
-Calculate the Total Reward Points for a given epoch, by using the Reward Weight for each Small Cell
+Calculate the Total Reward Points for a given epoch using the Reward Weight for each Small Cell
 Radio type.
 
-In this example, the total rewards Points per epoch is 4,000 and the ratios are as follows:
+In this example, the total rewards Points per epoch is 4,000, and the ratios are as follows:
 
 ```bash
   High-Power Outdoor Count (  150) * 4.0    =>      600   =>  0.15
@@ -179,23 +179,23 @@ Speed Test metrics are not yet included in Rewards calculations.
 
 :::
 
-A 5G Hotspot will automatically perform a Speed Test approximately every 12 hours with the results
-being averaged by the MOBILE PoC Oracle.
+A 5G Hotspot will automatically perform a Speed Test approximately every 12 hours, with the results
+averaged by the MOBILE PoC Oracle.
 
 Soon, the MOBILE PoC Oracle will include these Speed Test metrics in the Rewards calculations for
 each 5G Hotspot.
 
-The "Moving Average", also known as a "Rolling Average", is the average of at least `2` but no more
+The "Moving Average," also known as a "Rolling Average," is the average of at least `2` but no more
 than `6` most recent Speed Test results for each download, upload, and latency for a given 5G
 Hotspot.
 
-Additionally, the Moving Average is reset following a Speed Test gap of `>12 hours` and a new series
+Additionally, the Moving Average resets following a Speed Test gap of `>12 hours,` and a new series
 of Speed Test results must be collected before a Moving Average can be calculated.
 
 ### Tiered Speed Test
 
 In response to community feedback and further exploration by Chris from DeWiPulse for his
-[analysis of and commentary on public Internet data in the United States](https://dewipulse.com/connectivity-where-it-matters/)
+[analysis of and commentary on public Internet data in the United States,](https://dewipulse.com/connectivity-where-it-matters/)
 Speed Test results are categorized into one of four Tiers.
 
 | Speed Test Tier | Reward Multiplier | Requirement (speeds in Mbps, latency in ms)                  |
@@ -208,10 +208,10 @@ Speed Test results are categorized into one of four Tiers.
 :::note Why are Hotspots with slower speeds being rewarded at all?
 
 Many locations where CBRS connectivity is being deployed, including some rural areas, do not always
-have the Internet high-speed connectivity needed to always meet the acceptable Internet requirements
-for Genesis rewards.
+have the high-speed Internet connectivity needed to meet the acceptable Internet requirements for
+Genesis rewards consistently.
 
-Often these areas don't have good cellular coverage either. That's why we believe it is important to
+Often these areas don't have good cellular coverage either. That's why we believe it is essential to
 incentivize Helium deployments in less well-connected areas.
 
 :::
@@ -219,7 +219,7 @@ incentivize Helium deployments in less well-connected areas.
 :::warning **backhaul requirements will evolve**
 
 As the needs and realities of the 5G Hotspot network change, Internet backhaul requirements will
-evolve to better suit the network and its users.
+evolve to better suit the Network and its users.
 
 :::
 
@@ -227,7 +227,7 @@ evolve to better suit the network and its users.
 
 Tiered Speed Test values introduce a new multiplier to the Rewards calculations.
 
-- Speed Test Results are put into Tiers based on the minimum value of each Download, Upload and
+- Speed Test Results are put into Tiers based on the minimum value of each Download, Upload, and
   Latency (logical `AND`).
 - Speed Test results that do not meet the minimum requirements for any Download, Upload, or Latency
   are considered to have `Failed` and are not eligible for Rewards until the Speed Test Average is
@@ -309,12 +309,12 @@ Speed Test Tier ->  `Fail`        -> 0.0x Multiplier
 **Speed Test Metrics shown on Explorer are currently the most recent results.**
 
 **Once Speed Tests are incorporated into Rewards calculations, the Explorer will be updated to show
-the results of the Moving Average for each metric. See Examples of possible results below.**
+the Moving Average results for each metric. See Examples of possible results below.**
 
 :::
 
 Speed Test metrics will be viewable on the 5G Hotspot's page on Explorer under the `5G Statistics`
-tab. Here are some examples of each status and a brief description of each metric and the resulting
+tab. Here are examples of each status and a brief description of each metric and the resulting
 impact on Rewards calculations.
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
@@ -400,8 +400,8 @@ impact on Rewards calculations.
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <b>Speed Test Not Measured</b>
       <p>
-        This status appears when a 5G Hotspot has been newly installed and no Speed Tests have been
-        performed.
+        This status appears when a 5G Hotspot has been recently installed, and no Speed Tests have
+        been performed.
       </p>
       <p>
         A <code>0.0x</code> multiplier is applied for the current Reward Period.
@@ -418,9 +418,9 @@ impact on Rewards calculations.
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <b>No Recent Speed Test Data</b>
       <p>
-        This status appears when a Speed Test could not performed in the previous 24 hours. For
-        example, when a 5G Hotspot has recently recovered from a long network interruption, power
-        interruption, or other connection interruptions have occurred.
+        This status appears when a Speed Test could not be performed in the previous 24 hours. For
+        example, when a 5G Hotspot has recently recovered from a prolonged network interruption,
+        power interruption, or other connection interruptions have occurred.
       </p>
       <p>
         A <code>0.0x</code> multiplier is applied for the current Reward Period.
@@ -442,7 +442,7 @@ impact on Rewards calculations.
       </p>
       <p>
         This is common when a 5G Hotspot has been newly installed, has recently recovered from a
-        long network interruption, or in other scenarios in which a Speed Test could not be
+        prolonged network interruption, or in other scenarios where a Speed Test could not be
         performed.
       </p>
       <p>
@@ -454,13 +454,12 @@ impact on Rewards calculations.
 
 ### Example Calculation Tables
 
-Here are a set of tables to help visualize all of these components that make up the Speed Test
-result.
+Here are a set of tables to help visualize the components that make up the Speed Test result.
 
 :::info
 
-Note that it may take up to 12 hours for newly connected 5G Hotspots to perform a Speed Test and a
-minimum of 2 Speed Tests are required for the MOBILE PoC Oracle to calculate a moving average.
+It may take up to 12 hours for newly connected 5G Hotspots to perform a Speed Test, and a minimum of
+2 Speed Tests are required for the MOBILE PoC Oracle to calculate a moving average.
 
 :::
 
@@ -473,7 +472,7 @@ This 5G Hotspot is passing all Speed Test metrics and is providing a high-qualit
 **Test 1**
 
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Test 1 is the most recent as there is not enough data to calculate a Moving Average.
+of Test 1 are the most recent as there is not enough data to calculate a Moving Average.
 
 **Test 2 and Later**
 
@@ -491,7 +490,7 @@ This 5G Hotspot has not reported Speed Test data at Test 5.
 **Test 1**
 
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Test 1 is the most recent as there is not enough data to calculate a Moving Average.
+of Test 1 are the most recent as there is not enough data to calculate a Moving Average.
 
 **Test 2 through 4**
 
@@ -520,7 +519,7 @@ This 5G Hotspot has not reported Speed Test data during Test 5, 6, or 7. This is
 **Test 1**
 
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Test 1 is the most recent as there is not enough data to calculate a Moving Average.
+of Test 1 are the most recent as there is not enough data to calculate a Moving Average.
 
 **Test 2 through 4**
 
@@ -549,7 +548,7 @@ within the passing range.
 **Test 1**
 
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Test 1 is the most recent as there is not enough data to calculate a Moving Average.
+of Test 1 are the most recent as there is not enough data to calculate a Moving Average.
 
 **Test 2 and Later**
 
@@ -568,7 +567,7 @@ Moving Average to fall for Tests 6, 7, and 8.
 **Test 1**
 
 This 5G Hotspot **will not** be eligible for rewards during the Reward Periods for which the results
-of Test 1 is the most recent as there is not enough data to calculate a Moving Average.
+of Test 1 are the most recent as there is not enough data to calculate a Moving Average.
 
 **Test 2 through 5**
 
@@ -590,28 +589,27 @@ results of Tests 9 and later are the most recent.
 
 ## Future Roadmap
 
-Additional methods of MOBILE Proof of Coverage will emerge. Stay tuned!
-
 ### Heartbeats and Reliability of Service
 
 To encourage reliable signal availability, 5G Hotspots and connected CBRS Small Cell Radios must:
 
-- Be properly installed.
+- Be installed appropriately.
   - Be registered with the SAS (Outdoor Radios Only).
 - **Generate at least 1 "heartbeat" per 1 hour for any 12 hours in the 24-hour Reward Period.**
 - Meet minimum backhaul Speed Test requirements.
 
 ### MOBILE Mappers
 
-Mobile Mappers are hardware devices designed specifically to attach to CBRS Small Cell Radios to
-assist in verifying the quality of coverage and their location in a particular hex.
+Mobile Mappers are hardware devices explicitly designed to attach to CBRS Small Cell Radios to
+verify coverage quality and location in a particular hex.
 
-In accordance with [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) Mobile
-Mappers will earn 10% of Mobile rewards for verifying the Network.
+Following [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md), Mobile Mappers will
+earn 10% of Mobile rewards for verifying the Network.
 
-The transition from “heartbeat” rewards, as in [Genesis](/5g-on-helium/mobile-poc#mobile-genesis),
-to Mapping rewards will not happen immediately. A transitional period will allow 5G Hotspot Owners
-with active CBRS Small Cell Radios to receive both “heartbeat” rewards and rewards for being mapped.
+The transition from "heartbeat" rewards, as in [Genesis](/5g-on-helium/mobile-poc#mobile-genesis),
+to Mapping rewards will not happen immediately. Instead, a transitional period will allow 5G Hotspot
+Owners with active CBRS Small Cell Radios to receive both "heartbeat" rewards and rewards for being
+mapped.
 
 The details on how data from Mobile Mappers will be used in rewards calculations are currently in
 development.
