--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -62,33 +62,40 @@ pre-mined MOBILE tokens. MOBILE tokens will be redeemable for HNT after the Gene
 
 :::
 
-### Small Cell Radio Reward Scaling
+---
 
-All properly installed and registered 5G Hotspots will earn rewards for participating on the
-Network. A rewards unit multiple is applied to the various Small Cell Radio models based on whether
-they are indoor or outdoor, as well as their power output, as follows:
+## MOBILE Genesis
 
-:::note
+During Genesis, 100M MOBILE tokens are allocated to be issued per day. This 24-hour Reward Period is
+expressed in blocks and aligns as close to the Reward Period time range as possible but may not line
+up exactly on 24-hour intervals.
 
-Soon 5G Hotspots will perform Speed Tests that impact
-[Rewards Scaling Multipliers](./mobile-poc#speed-test-tier-reward-scaling) in addition to Small Cell
-Type.
+Given this slight differentiation, daily rewards may not equal 100M MOBILE. Check out this
+[Example Reward Transaction](https://explorer.helium.com/txns/0n4TO_2W14rrsGt-nxBTotiHFCFukkO04QoXIxaOtAY)
+for reference.
 
-When Speed Tests are included in Rewards calculations, the Reward weights will be as follows:
+To qualify for Genesis Rewards in a given Reward Period, a CBRS Small Cell Radio must:
 
-| Speed Test           | Acceptable Performance | Degraded Performance | Poor Performance |  Fail   |
-| -------------------- | :--------------------: | :------------------: | :--------------: | :-----: |
-| High Power Outdoor\* |        `4.000`         |       `2.000`        |     `1.000`      | `0.000` |
-| Outdoor              |        `2.500`         |       `1.250`        |     `0.625`      | `0.000` |
-| Indoor               |        `1.000`         |       `0.500`        |     `0.250`      | `0.000` |
+- Be connected to a 5G Hotspot.
+- Be installed appropriately.
+  - Be registered with the SAS (Outdoor Radios Only).
+- Broadcast at least 1 "heartbeat" per Reward Period.
+
+:::note What is a "Heartbeat"?
+
+A "heartbeat" is data sent by the 5G Hotspot indicating that the connected CBRS Small Cell Radio(s)
+is authorized to transmit 5G coverage.
+
+Heartbeats occur every 60 seconds and transmit authorizations are valid for 240 seconds. This
+rolling overlap ensures that a Small Cell Radio can broadcast on an ongoing basis while allowing for
+brief interruptions.
 
 :::
 
-> \*Currently, the only High-Power Outdoor Radio is the `Baicells Nova436H`
 
 Individual rewards per period are calculated as a proportion of the total weighted reward units.
 
-## Earnings Example
+### Earnings Example
 
 Earnings are calculated in 3 steps.
 
@@ -111,7 +118,7 @@ following (the below numbers are examples and may not reflect actual deployed 5G
 
 :::
 
-### Total Rewards Units for Epoch
+## Total Rewards Units for Epoch
 
 Calculate the Total Reward Points for a given epoch using the Reward Weight for each Small Cell
 Radio type.
@@ -137,37 +144,6 @@ High-Power Outdoor  => 100,000,000 * 0.15 /   150 = 100,000 MOBILE per day
            Outdoor  => 100,000,000 * 0.50 /   800 =  62,500 MOBILE per day
             Indoor  => 100,000,000 * 0.35 / 1,400 =  25,000 MOBILE per day
 ```
-
----
-
-## MOBILE Genesis
-
-During Genesis, 100M MOBILE tokens are allocated to be issued per day. This 24-hour Reward Period is
-expressed in blocks, and aligns as close to the Reward Period time range as possible, but may not
-line up exactly on 24-hour intervals.
-
-Given this slight differentiation, daily rewards may not equate to an exact 100M MOBILE. Check out
-this
-[Example Reward Transaction](https://explorer.helium.com/txns/0n4TO_2W14rrsGt-nxBTotiHFCFukkO04QoXIxaOtAY)
-for reference.
-
-To qualify for Genesis Rewards in a given Reward Period, a CBRS Small Cell Radio must:
-
-- Be connected to a 5G Hotspot.
-- Be properly installed.
-  - Be registered with the SAS (Outdoor Radios Only).
-- Broadcast at least 1 "heartbeat" per Reward Period.
-
-:::note What is a "Heartbeat"?
-
-A "heartbeat" is data sent by the 5G Hotspot indicating that the connected CBRS Small Cell Radio(s)
-is authorized to transmit 5G coverage.
-
-Heartbeats occur every 60 seconds and transmit authorizations are valid for 240 seconds, this
-rolling overlap ensures that a Small Cell Radio can broadcast on an ongoing basis while allowing for
-brief interruptions.
-
-:::
 
 ---
 
