--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -303,16 +303,17 @@ Speed Test Tier ->  `Fail`        -> 0.0x Multiplier
 
 :::caution Coming Soon
 
-**Speed Test Metrics shown on Explorer are currently the most recent results.**
+**Speed Test Metrics shown on Explorer are Moving Averages.**
 
-**Once Speed Tests are incorporated into Rewards calculations, the Explorer will be updated to show
-the Moving Average results for each metric. See Examples of possible results below.**
+**Speed Tests are not yet incorporated into Rewards calculations.**
 
 :::
 
 Speed Test metrics will be viewable on the 5G Hotspot's page on Explorer under the `5G Statistics`
 tab. Here are examples of each status and a brief description of each metric and the resulting
 impact on Rewards calculations.
+
+---
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -332,6 +333,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -350,6 +356,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -368,6 +379,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -387,6 +403,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -405,6 +426,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -424,6 +450,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -448,6 +479,8 @@ impact on Rewards calculations.
     </div>
   </div>
 </div>
+
+---
 
 ### Example Calculation Tables
 
