updated explorer speed test sample images and wording (#1018)
* updated Rewards Period info and Speed Test logic

* sample images include average, formatting

* remove coming soon disclaimer

--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -282,37 +282,19 @@ Speed Test Tier ->  `Fail`        -> 0.0x Multiplier
 
 ### Statistics on Helium Explorer
 
-**Current Explorer Statistics View**
-
-<div class="container" style={{ padding: 0, paddingTop: 0 }}>
-  <div class="row">
-    <div class="col col--6" style={{ marginBottom: 0 }}>
-      <p>
-        Currently, Speed Test Metrics on Explorer are the latest results, <b>NOT</b> the Moving
-        Average that will be used in Rewards Calculations.
-      </p>
-    </div>
-    <div class="col col--6" style={{ marginBottom: 0 }}>
-      <img
-        className="explorerSidebar"
-        src={useBaseUrl('img/5g-on-helium/explorer-5g-stats-raw-data.png')}
-      />
-    </div>
-  </div>
-</div>
-
 :::caution Coming Soon
 
-**Speed Test Metrics shown on Explorer are currently the most recent results.**
+**Speed Test Metrics shown on Explorer are Moving Averages.**
 
-**Once Speed Tests are incorporated into Rewards calculations, the Explorer will be updated to show
-the Moving Average results for each metric. See Examples of possible results below.**
+**Speed Tests are not yet incorporated into Rewards calculations.**
 
 :::
 
 Speed Test metrics will be viewable on the 5G Hotspot's page on Explorer under the `5G Statistics`
 tab. Here are examples of each status and a brief description of each metric and the resulting
 impact on Rewards calculations.
+
+---
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -332,6 +314,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -350,6 +337,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -368,6 +360,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -387,6 +384,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -405,6 +407,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -424,6 +431,11 @@ impact on Rewards calculations.
       </p>
     </div>
   </div>
+</div>
+
+---
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
@@ -448,6 +460,8 @@ impact on Rewards calculations.
     </div>
   </div>
 </div>
+
+---
 
 ### Example Calculation Tables
 
