speed test activation language updates

--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -162,16 +162,8 @@ High-Power Outdoor  => 100,000,000 * 0.15 /   150 = 100,000 MOBILE per day
 
 ## Speed Tests and Quality of Service
 
-:::caution Coming Soon
-
-Speed Test metrics are not yet included in Rewards calculations.
-
-:::
-
 A 5G Hotspot will automatically perform a Speed Test, with the results averaged by the MOBILE PoC
-Oracle.
-
-Soon, the MOBILE PoC Oracle will include these Speed Test metrics in the Rewards calculations for
+Oracle. The MOBILE PoC Oracle will include these Speed Test metrics in the Rewards calculations for
 each 5G Hotspot.
 
 The 5G Hotspot will randomly measure download, upload, and latency to the MOBILE verifier twice in a
@@ -282,17 +274,9 @@ Speed Test Tier ->  `Fail`        -> 0.0x Multiplier
 
 ### Statistics on Helium Explorer
 
-:::caution Coming Soon
-
-**Speed Test Metrics shown on Explorer are Moving Averages.**
-
-**Speed Tests are not yet incorporated into Rewards calculations.**
-
-:::
-
-Speed Test metrics will be viewable on the 5G Hotspot's page on Explorer under the `5G Statistics`
-tab. Here are examples of each status and a brief description of each metric and the resulting
-impact on Rewards calculations.
+Speed Test metrics are viewable on the 5G Hotspot's page on Explorer under the `5G Statistics` tab.
+Here are examples of each status and a brief description of each metric and the resulting impact on
+Rewards calculations.
 
 ---
 
